traefik/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 8000
      nodePort: 32001
    - protocol: TCP
      name: admin
      port: 8080
      nodePort: 32002
  selector:
    app: traefik
